tests/NormalTests/paczka1/small_fuzzy/41552964.err
Error in line 1: Gsw S329 68,5
Error in line 8: VkZ1 S459 11,6
Error in line 7: Gsw A166 87,9
